--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -1,23 +1,30 @@
 .card {
-  background-color: #00503e;
-  border-radius: 10px;
-
-  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transition */
+  background-color: rgba(
+    0,
+    115,
+    136,
+    0.5
+  ); /* Semi-transparent blue background */
+  border-radius: 8px; /* Rounded corners */
+  backdrop-filter: blur(8px); /* Blur effect for the glass effect */
+  transition: transform 0.3s ease, box-shadow 0.3s ease,
+    background-color 0.3s ease; /* Smooth transition */
 }
 
+/* Hover effect */
 .card:hover {
   transform: translateY(-10px); /* Slight lift effect */
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); /* Shadow effect */
-  background-color: #007358; /* Slightly lighter shade on hover */
+  background-color: rgba(0, 115, 136, 0.7); /* Slightly darker shade on hover */
 }
 
 .card-title,
 .card {
-  color: white;
+  color: black;
 }
 .card-img-top {
-  height: 200px;
-  object-fit: cover;
+  height: 400px;
+  object-fit: calc();
 }
 .navbar-brand {
   color: white;
@@ -26,7 +33,7 @@
   background: white;
 }
 nav {
-  background-color: #00503e;
+  background-color: #09485a; /* Changed from #00503e to a blue shade */
 }
 .default-message {
   position: absolute;
@@ -40,7 +47,7 @@ nav {
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: #007358;
+  background-color: #0056b3; /* Changed from #007358 to a blue shade */
   color: white;
   display: flex;
   align-items: center;
@@ -49,7 +56,13 @@ nav {
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
 
   animation: gradientBackground 15s ease infinite;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background: linear-gradient(
+    -45deg,
+    #ee7752,
+    #e73c7e,
+    #23a6d5,
+    #23d5ab
+  ); /* Keep the gradient as is */
   background-size: 400% 400%;
 }
 @keyframes gradientBackground {
